tests/fixtures/LatestTests/VariableDeclarationTests/errors/scope_local_access_outside.fg
/; EXPECT_ERROR: VariableNotFound
{
  var x:int = 100
}
print(x, "\n")

